Fix minor spacing issue on GitHub button

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,6 @@ button {
 .demo-button {
   background-color: var(--primary);
   color: var(--darkest);
-  border: none;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
   gap: 10px;
 }
@@ -70,14 +69,14 @@ button {
 .github-button {
   background-color: var(--white);
   color: var(--primary);
-  border: 1px solid var(--primary);
+  outline: 1px solid var(--primary);
   gap: 10px;
 }
 
 .github-button:hover {
   background-color: var(--light);
   color: var(--darkest);
-  border: none;
+  outline: 1px solid var(--light);
 }
 
 .close-btn:hover {
